--- a/src/ui/Screens/SplashScreen.fxml
+++ b/src/ui/Screens/SplashScreen.fxml
@@ -32,7 +32,7 @@
          <bottom>
             <FlowPane alignment="BOTTOM_CENTER" minHeight="500.0" orientation="VERTICAL" prefHeight="1000.0" prefWidth="500.0" vgap="130.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button fx:id="button3" alignment="CENTER" minHeight="38.0" minWidth="100.0" onAction="#handleButtonAction" prefHeight="41.0" prefWidth="0.0">
+                  <Button fx:id="play_btn" alignment="CENTER" minHeight="38.0" minWidth="100.0" onAction="#handleButtonAction" prefHeight="41.0" prefWidth="0.0">
                      <graphic>
                         <ImageView fitHeight="120.0" fitWidth="300.0" nodeOrientation="INHERIT">
                            <image>
@@ -47,7 +47,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="button31" maxHeight="50.0" maxWidth="138.0" minHeight="21.0" minWidth="100.0" onAction="#handleButtonAction" prefHeight="32.0" prefWidth="0.0">
+                  <Button fx:id="about_btn" maxHeight="50.0" maxWidth="138.0" minHeight="21.0" minWidth="100.0" onAction="#handleButtonAction" prefHeight="32.0" prefWidth="0.0">
                      <graphic>
                         <ImageView fitHeight="120.0" fitWidth="300.0" nodeOrientation="INHERIT">
                            <image>
@@ -62,7 +62,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="button32" maxHeight="71.0" maxWidth="148.0" minHeight="21.0" minWidth="100.0" onAction="#handleButtonAction" prefHeight="39.0" prefWidth="0.0">
+                  <Button fx:id="exit_btn" maxHeight="71.0" maxWidth="148.0" minHeight="21.0" minWidth="100.0" onAction="#handleButtonAction" prefHeight="39.0" prefWidth="0.0">
                      <graphic>
                         <ImageView fitHeight="120.0" fitWidth="300.0" pickOnBounds="true">
                            <image>
